# rise-next

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  rise-backup.json  run.sh
agent/: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs
agent/assets/: GroundCycleContract.json  GroundCycleNoCryptoContract.json
agent/migrations/: 20240207111257_init.sql
agent/src/: agreement_contract.rs  client.rs  did_contract.rs  ground_cycle_contract.rs  ground_cycle_no_crypto_contract.rs  indexer.rs  main.rs
agent/src/contracts/: mod.rs
contracts/: .gitignore  README.md
contracts-rs/: Cargo.toml
contracts-rs/src/: lib.rs
contracts-rs/src/contracts/: mod.rs
contracts/script/: DataProving.s.sol  GroundCycle.s.sol  Rise.s.sol
contracts/src/: Agreement.sol  DID.sol  DataProving.sol  GroundCycle.sol  GroundCycleNoCrypto.sol
contracts/test/: Agreement.t.sol  DID.t.sol  GroundCycle.t.sol
deploy/: Dockerfile  build-x86.sh
docs/: GroundCycle.puml  README.md
nexa-server/: Cargo.toml
nexa-server/ci/: benchmark.sh  benchmark.txt  deploy.sh  photo-upload.sh  release.sh  video-upload.sh
nexa-server/src/: error.rs  main.rs  photo.rs  video.rs
nexa-ui/: Makefile  README.md  TODO  bun.lockb  index.html  package-lock.json  package.json  run.sh  vite.config.js
nexa-ui/src/: App.vue  error.js  main.js
nexa-ui/src/assets/: main.css  vue-cookie-accept-decline.css
nexa-ui/src/components/: CopyButton.vue  NexaPartners.vue  NexaSponsors.vue  PhotoLicense.vue  Picture.vue
nexa-ui/src/constants/: index.js
nexa-ui/src/router/: index.js
nexa-ui/src/views/: Home.vue  ImageUploadView.vue  PaymentToolsView.vue  StreamSnapshotView.vue  VideoUploadView.vue
rise-ui/: .eslintignore  .prettierignore  Makefile  README.md  bun.lockb  eslint.config.js  index.html  package.json
rise-ui/src/: App.vue
rise-ui/src/assets/: AgreementContract.json  DIDContract.json  DataProvingContract.json  main.css
rise-ui/src/router/: index.js
rise-ui/src/utils/: index.js
rise-ui/src/views/: AgreementsView.vue  CreateAgreement.vue  DIDManagement.vue  GetAgreement.vue  LandingView.vue  LandingsView.vue  QRCode.vue  SignAgreement.vue  StationsView.vue  StatsView.vue  StreamSnapshotView.vue  WalletManagement.vue
streaming/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  nginx.conf  stream.sh
streaming/ci/: deploy.sh  release.sh
streaming/src/: data_proving_contract.rs  main.rs
ui/: .prettierignore  Makefile  README.md  bun.lockb  index.html  package.json  run.sh
ui/ci/: Dockerfile  Makefile  README.md
ui/src/: App.vue  main.js
ui/src/assets/: AgreementContract.json  DIDContract.json  main.css
ui/src/constants/: index.js
ui/src/router/: index.js
ui/src/utils/: index.js
ui/src/views/: AgreementsView.vue  CreateAgreement.vue  DIDManagement.vue  GetAgreement.vue  LandingView.vue  LandingsView.vue  QRCode.vue  SignAgreement.vue  StationsView.vue  StatsView.vue  WalletManagement.vue
