[workspace]
members = ["contracts-rs", "agent", "streaming"]
default-members = ["contracts-rs", "agent", "streaming"]
resolver = "2"

[workspace.dependencies]
ethers = { version = "2.0.14", features = ["rustls"], default-features = false }
serde = { version = "1.0.198", features = ["std", "derive"], default-features = false }
