[package]
name = "nexa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
base64 = "0.22.1"
bytes = "1.6.0"
chrono = "0.4.38"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client"] }
hyper-tls = "0.6.0"
hyper-util = "0.1.3"
log = "0.4.21"
rand = "0.8.5"
serde.workspace = true
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = "0.3.18"
