[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.4", features = ["std", "derive", "help"], default-features = false }
sha2 = { version = "0.10.8", features = [], default-features = true }
base64 = { version = "0.22.1", features = [], default-features = true }

[build-dependencies]
ethers = { workspace = true }
